--- a/recordit/templates/admin/change_password.html
+++ b/recordit/templates/admin/change_password.html
@@ -3,7 +3,7 @@
 {% from 'macros/macros.html' import render_breadcrumb_item %}
 
 
-{% block title %}Edit Profile{% endblock %}
+{% block title %}Change Password{% endblock %}
 
 
 {% block breadcrumb %}
@@ -18,9 +18,7 @@
                         {{ render_breadcrumb_item(endpoint='front.index', name='Home') }}
                         {{ render_breadcrumb_item(endpoint='admin.index', name='Dashboard') }}
                         {{ render_breadcrumb_item(endpoint='admin.manage_user', name='Manage User') }}
-                        <li class="breadcrumb-item active">
-                            Change Password
-                        </li>
+                        <li class="breadcrumb-item active">Change Password</li>
                     </ul>
                 </div>
             </div>
@@ -36,11 +34,9 @@
         <div class="row">
             <div class="col-12">
                 <div class="account-dashboard">
-                    <div class="tab-content dashboard-content">
-                        <div class="tab-pane active">
-                            <h3>{{ _('Change Password') }}</h3>
-                            <p>{{ render_form(form) }}</p>
-                        </div>
+                    <div class="dashboard-content">
+                        <h3>{{ _('Change Password') }}</h3>
+                        <p>{{ render_form(form) }}</p>
                     </div>
                 </div>
             </div>
